# viva

./: .credo.exs  .dockerignore  .editorconfig  .env.example  .formatter.exs  .gitignore  .gitmodules  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  MODULE_HARMONY.md  Makefile  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh.md  README_PT.md  SECURITY.md  docker-compose.yml  gleam.toml  manifest.toml  mix.exs  repomix.config.json  run_credo.sh  test_all_features.exs  verify_system.exs
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  pages.yml  test.yml
apps/viva_bridge/: .gitignore  README.md  mix.exs  verify_mirror.exs  verify_nerves.exs
apps/viva_bridge/native/viva_body/: Cargo.toml  build.rs
apps/viva_bridge/native/viva_body/src/: app.rs  asm.rs  bio_rhythm.rs  body_state.rs  cpu_topology.rs  dynamics.rs  lib.rs  metabolism.rs  mirror.rs  os_stats.rs  prelude.rs  serial_sensor.rs
apps/viva_bridge/native/viva_body/src/brain/: cortex.rs  mod.rs
apps/viva_bridge/native/viva_body/src/components/: bio_rhythm.rs  cpu_sense.rs  emotional_state.rs  memory_sense.rs  mod.rs  mortality.rs  thermal_sense.rs
apps/viva_bridge/native/viva_body/src/math_opt/: mod.rs
apps/viva_bridge/native/viva_body/src/memory/: hebbian.rs  mod.rs  sqlite_backend.rs  types.rs  usearch_backend.rs
apps/viva_bridge/native/viva_body/src/physics/: clock.rs  mod.rs  plugin.rs  prediction.rs  qualia.rs  ring_buffer.rs  soul_sync.rs
apps/viva_bridge/native/viva_body/src/plugins/: bridge_plugin.rs  dynamics_plugin.rs  mod.rs  sensor_plugin.rs
apps/viva_bridge/native/viva_body/src/resources/: body_config.rs  host_sensor.rs  mod.rs  soul_channel.rs
apps/viva_bridge/native/viva_body/src/sensors/: fallback.rs  linux.rs  mod.rs  trait_def.rs  windows.rs  wsl.rs
apps/viva_bridge/native/viva_body/src/systems/: calculate_stress.rs  evolve_dynamics.rs  mod.rs  sense_hardware.rs  sync_soul.rs
apps/viva_common/: mix.exs
apps/viva_core/: .gitignore  README.md  mix.exs
arduino/speaker_test/: speaker_test.ino
arduino/viva_body/: viva_body.ino  viva_packets.h
arduino/viva_body_baremetal/: Makefile  main.c
arduino/viva_music/: viva_music.ino
arduino/viva_senses/: viva_senses.ino
assets/css/: app.css
assets/js/: app.js
c_src/: viva_simd_nif.c
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: ARCHITECTURE.md  BENCHMARK_RESULTS.md  CONTRIBUTING.md  PHASE_1-4_REPORT.md  README_ACADEMIC.md  SECURITY.md  _config.yml  index.html  landing.html  reader.html  viva-tech-stack.md
docs/en/: README.md  SUMMARY.md  architecture.md  cortex-api.md  thoughtseeds_api.md  ultra_api.md  windows_build.md
docs/paper/: README.md  abstract.md  conclusion.md  experiments.md  introduction.md  methodology.md  related_work.md
docs/pt-br/: README.md  SUMMARY.md  arquitetura.md  cortex_api.md  thoughtseeds-api.md  ultra_api.md  windows-build.md
docs/technical/: README.md  api_reference.md  architecture.md  performance_guide.md
docs/zh-cn/: README.md  SUMMARY.md  architecture.md  cortex_api.md  thoughtseeds-api.md  ultra-api.md  ultra_api.md  windows-build.md
ffi/: viva_gpu.ex
ffi/viva/: benchmark_cuda.ex  benchmark_gpu_real.ex  benchmark_souls.ex  llm.ex  nx.ex
legacy/: README.md
legacy/elixir/: agency.ex  application.ex  emotion_fusion.ex  emotional.ex  interoception.ex  mathematics.ex  memory_seed.ex  mycelium.ex  qdrant.ex  senses.ex  voice.ex
legacy/rust/: build.rs  clippy.toml
legacy/verification/: README.md  algebra_of_thought.exs
lib/: viva.ex  viva_web.ex
lib/viva/: accounts.ex  application.ex  avatars.ex  conversations.ex  matching.ex  nim.ex  nx.ex  postgrex_types.ex  relationships.ex  release.ex  repo.ex
lib/viva_web/: endpoint.ex  gettext.ex  router.ex  (+1 more)
native/viva_burn/: Cargo.toml
native/viva_burn/src/: batch_forward.rs  batch_physics.rs  cma_es.rs  cuda_kernels.rs  lib.rs  tensor_physics.rs  tensorize.rs
native/viva_glands/: Cargo.toml  build.rs
native/viva_glands/.cargo/: config.toml
native/viva_glands/src/: lib.rs
native/viva_jolt/: Cargo.toml
native/viva_jolt/src/: lib.rs
native/viva_llm/: Cargo.toml
native/viva_llm/.cargo/: config.toml
native/viva_llm/src/: lib.rs
rel/: env.sh.eex
scripts/: analyze_simulation.R  bench_gpu.exs  download_model.sh  dynamic_simulation.exs  enhanced_sentience_test.exs  inject-mermaid.py  inject-mermaid.sh  run_simulation.exs  run_simulation_v2.exs  scientific_sentience_test.exs  sentience_test.exs  serial_bridge.py  simulate_v3_genetic.py  simulate_v4_survival.py  test_llm.exs  test_proprioception.exs  visualize_simulation.py  visualize_v2.py  visualize_v3.py  visualize_v4.py  viva_audio.py  viva_learn.py  viva_live.exs  viva_monitor.py  viva_network.R  viva_network.py  viva_see.py  viva_soul_body.py  viva_vision.py
src/: viva.gleam  viva_body_ffi.erl  viva_gpu_ffi.erl  viva_hardware_ffi.erl  viva_hrr_fft.erl  viva_hrr_fft.ex  viva_nx.ex  viva_nx_check.erl  viva_serial_ffi.erl  viva_tensor_ffi.erl
test/: advanced_neural_test.gleam  bardo_test.gleam  benchmark_standard_test.gleam  billiards_test.gleam  burn_physics_test.gleam  cma_es_test.gleam  cognition_broker_test.gleam  creator_test.gleam  embodied_test.gleam  genome_test.gleam  hardware_test.gleam  imprint_test.gleam  inner_life_test.gleam  memory_test.gleam  narrative_attention_test.gleam  narrative_test.gleam  neat_hybrid_test.gleam  network_test.gleam  neural_test.gleam  physics_test.gleam  realtime_vision_test.gleam  reflexivity_test.gleam  resonance_test.gleam  sinuca_test.gleam  soul_pool_test.gleam  soul_test.gleam  supervisor_test.gleam  test_helper.exs  train_test.gleam  viva_test.gleam  world_test.gleam
(+655 files in other folders)
