[package]
name = "viva_jolt"
version = "0.2.0"
authors = ["Gabriel Maia <gabrielmaialva33@gmail.com>"]
edition = "2021"
rust-version = "1.75"
description = "VIVA JoltPhysics - AAA Physics Engine for Gleam with ContactListener"

[lib]
name = "viva_jolt"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
# Use joltc-sys from local jolt-rust repo (has ContactListener support)
joltc-sys = { path = "../../repos/jolt-rust/crates/joltc-sys" }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
