[package]
name = "viva_body"
version = "0.1.0"
authors = ["Gabriel Maia <gabriel@viva.ai>"]
edition = "2021"
description = "VIVA's body - hardware sensing and interoception"

[lib]
name = "viva_body"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.35"
sysinfo = { version = "0.32", features = ["component"] }

# GPU sensing - detecção em runtime (funciona mesmo sem NVIDIA)
nvml-wrapper = "0.10"

[features]
default = []
